# g6

./: .djlintrc  .gitignore  README.md  install_poetry_deps_from_requirements.ps1  main.py  pyproject.toml  requirements.txt  serve.cmd
admin/: admin.py  admin_auth.py  admin_board.py  admin_boardgroup.py  admin_boardgroupmember.py  admin_cache.py  admin_config.py  admin_content.py  admin_faq.py  admin_mail.py  admin_member.py  admin_menu.py  admin_newwin.py  admin_plugin.py  admin_point.py  admin_poll.py  admin_popular.py  admin_qa.py  admin_sendmail.py  admin_service.py  admin_theme.py  admin_visit.py  admin_write_count.py
admin/templates/basic/: alert.html.jinja  auth_list.html.jinja  base.html.jinja  base_sub.html.jinja  board_copy.html.jinja  board_form.html.jinja  board_list.html.jinja  boardgroup_form.html.jinja  boardgroup_list.html.jinja  boardgroupmember_form.html.jinja  boardgroupmember_list.html.jinja  cache_file_delete.html.jinja  config_form.html.jinja  content_form.html.jinja  content_list.html.jinja  datepicker.html.jinja  faq_form.html.jinja  faq_list.html.jinja  faq_master_form.html.jinja  faq_master_list.html.jinja  index.html.jinja  mail_form.html.jinja  mail_list.html.jinja  (+42 more)
bbs/: board.py  board_new.py  content.py  current_connect.py  faq.py  formmail.py  login.py  member_find.py  member_leave.py  member_profile.py  memo.py  password.py  point.py  poll.py  profile.py  qa.py  register.py  scrap.py  search.py  social.py
core/: exception.py
install/: default_values.py  router.py
install/templates/: _layout.html  form.html  license.html  main.html  result.html
lib/: board_lib.py  common.py  file_utils.py  template_functions.py
templates/basic/: alert.html.jinja  alert_close.html.jinja  base.html.jinja  base_sub.html.jinja  index.html.jinja
templates/bootstrap/: base.html.jinja  connect.html.jinja  faq.html.jinja
templates/tailwind/: alert.html.jinja  base.html.jinja  base_sub.html.jinja  index.html.jinja  new.html.jinja  search.html.jinja
(+178 files in other folders)
