[tool.poetry]
name = "g6"
version = "0.1.0"
description = ""
authors = ["bckim <bc_kim@newsalt.im>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
anyio = "3.7.1"
apscheduler = "3.10.4"
authlib = "1.2.1"
bcrypt = "4.1.3"
bleach = "6.1.0"
cachetools = "5.3.2"
certifi = "2023.7.22"
cffi = "1.16.0"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.1"
cryptography = "41.0.7"
cssbeautifier = "1.15.1"
cycler = "0.12.1"
distlib = "0.3.8"
djlint = "1.34.1"
editorconfig = "0.12.4"
exceptiongroup = "1.1.3"
fastapi = "0.110.3"
filelock = "3.12.2"
fonttools = "4.51.0"
greenlet = "3.0.1"
h11 = "0.14.0"
html-tag-names = "0.1.2"
html-void-elements = "0.1.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.4"
importlib-resources = "6.4.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsbeautifier = "1.15.1"
json5 = "0.9.25"
kiwisolver = "1.4.5"
lxml = "5.1.0"
markupsafe = "2.1.3"
matplotlib = "3.8.4"
numpy = "1.26.4"
packaging = "23.2"
pandas = "2.2.2"
passlib = "1.7.4"
pathspec = "0.12.1"
pbr = "6.0.0"
pillow = "10.3.0"
platformdirs = "4.2.1"
plotly = "5.18.0"
psycopg2-binary = "2.9.9"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pymysql = "1.1.0"
pyopenssl = "24.1.0"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.1"
python-multipart = "0.0.6"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
regex = "2023.12.25"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
sse-starlette = "2.1.0"
starlette = "0.37.2"
tenacity = "8.2.3"
testresources = "2.0.1"
tqdm = "4.66.4"
typing-extensions = "4.11.0"
tzdata = "2023.3"
tzlocal = "5.2"
ua-parser = "0.18.0"
user-agents = "2.2.0"
uvicorn = "0.29.0"
webencodings = "0.5.1"
zipp = "3.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
